# tidydesk

./: .gitignore  LICENSE  README.md  pyproject.toml
tidydesk/: __init__.py  __main__.py  classify.py  cli.py  config.py  extract.py  manifest.py  ocr.swift  organize.py  scheduler.py
