[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidydesk"
version = "0.1.0"
description = "AI-powered file organizer for macOS. Sorts by purpose, not file type."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ryan Fox", email = "ryanfoxeth@gmail.com" },
]
keywords = ["macos", "ai", "productivity", "cli", "file-organization", "claude", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.40.0",
    "pypdf>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ryanfoxeth/tidydesk"
Repository = "https://github.com/ryanfoxeth/tidydesk"
Issues = "https://github.com/ryanfoxeth/tidydesk/issues"

[project.scripts]
tidydesk = "tidydesk.cli:main"

[tool.setuptools.packages.find]
include = ["tidydesk*"]

[tool.setuptools.package-data]
tidydesk = ["ocr.swift"]
